alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
-    margin: 85px auto;
-    /* width: 70%; */
+    margin: 60px auto;
+    width: 80%; 
     background-color: #0e0916;
     color: #f0d975;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -44,6 +44,7 @@ body {
 
   #main {
     transition: margin-left .5s; /* transition effect */
+    margin-left: 85px;
     padding: 20px;
 }
   
